RESOLVED FIXED Bug 174972
Put g_gigacageBasePtr into its own page and make it read-only
https://bugs.webkit.org/show_bug.cgi?id=174972
Summary Put g_gigacageBasePtr into its own page and make it read-only
Filip Pizlo
Reported 2017-07-29 12:16:42 PDT
...
Attachments
the patch (13.43 KB, patch)
2017-09-26 17:27 PDT, Filip Pizlo
msaboff: review+
buildbot: commit-queue-
Archive of layout-test-results from ews115 for mac-elcapitan (2.03 MB, application/zip)
2017-09-26 19:02 PDT, Build Bot
no flags
the patch (13.50 KB, patch)
2017-09-26 20:54 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2017-09-26 17:27:18 PDT
Created attachment 321904 [details] the patch
Build Bot
Comment 2 2017-09-26 17:29:29 PDT
Attachment 321904 [details] did not pass style-queue: ERROR: Source/bmalloc/bmalloc/Gigacage.cpp:36: g_gigacageBasePtrs is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 3 2017-09-26 18:13:26 PDT
Comment on attachment 321904 [details] the patch r=me
Build Bot
Comment 4 2017-09-26 19:02:10 PDT
Comment on attachment 321904 [details] the patch Attachment 321904 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4671498 New failing tests: compositing/contents-format/subpixel-antialiased-text-configs.html compositing/canvas/accelerated-canvas-compositing.html compositing/canvas/accelerated-canvas-compositing-size-limit.html accessibility/mac/abbr-acronym-tags.html compositing/clipping/border-radius-overflow-hidden-stacking-context.html compositing/contents-opaque/background-clip.html compositing/culling/clear-fixed-iframe.html compositing/contents-format/subpixel-antialiased-text-configs-antialiasing-style.html accessibility/text-marker/character-offset-visible-position-conversion-hang.html compositing/animation/animated-composited-inside-hidden.html compositing/culling/filter-occlusion-alpha.html compositing/culling/filter-occlusion-alpha-large.html accessibility/mac/value-change/value-change-user-info-contenteditable.html animations/CSSKeyframesRule-name-null.html compositing/absolute-inside-out-of-view-fixed.html compositing/filters/opacity-change-on-filtered-paints-into-ancestor.html
Build Bot
Comment 5 2017-09-26 19:02:12 PDT
Created attachment 321926 [details] Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Filip Pizlo
Comment 6 2017-09-26 20:54:03 PDT
Created attachment 321936 [details] the patch
Build Bot
Comment 7 2017-09-26 20:55:31 PDT
Attachment 321936 [details] did not pass style-queue: ERROR: Source/bmalloc/bmalloc/Gigacage.cpp:36: g_gigacageBasePtrs is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 8 2017-09-26 21:03:58 PDT
Comment on attachment 321936 [details] the patch Clear r? because this patch is already reviewed.
Filip Pizlo
Comment 9 2017-09-26 22:05:50 PDT
Radar WebKit Bug Importer
Comment 10 2017-09-27 12:50:19 PDT
Note You need to log in before you can comment on or make changes to this bug.