Put g_gigacageBasePtr into its own page and make it read-only https://bugs.webkit.org/show_bug.cgi?id=174972

Reviewed by Michael Saboff.

Source/bmalloc:

This puts the gigacage base pointers into their own page and makes that page read-only.

* bmalloc/Gigacage.cpp:
(Gigacage::ensureGigacage):
(Gigacage::disablePrimitiveGigacage):
(Gigacage::addPrimitiveDisableCallback):
* bmalloc/Gigacage.h:
(Gigacage::basePtr):
(Gigacage::basePtrs):

Source/JavaScriptCore:

C++ code doesn't have to know about this change. That includes C++ code that generates JIT code.

But the offline assembler now needs to know about how to load from offsets of global variables.
This turned out to be easy to support by extending the existing expression support.

* llint/LowLevelInterpreter64.asm:
* offlineasm/ast.rb:
* offlineasm/parser.rb:
* offlineasm/transform.rb:
* offlineasm/x86.rb:



Canonical link: https://commits.webkit.org/193838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222549 268f45cc-cd09-0410-ab3c-d52691b4dbfc